homework 13: added changes to html and less

--- a/FL11_HW13_css-frameworks/styles/styles.less
+++ b/FL11_HW13_css-frameworks/styles/styles.less
@@ -12,6 +12,10 @@ main div.container hr {
     border: 1px solid @colorBlue;
 }
 
+img[alt="yoga"] {
+    width: 100%;
+}
+
 .bg-red {
     background-color: @colorRed;
     border-color: @colorRed;
